Support Rng type in JS